package atm;

import java.util.Date;

public class Transaction {
	private double amount;
	private Date transTime;

	/**
	 * Construct a new TransferTransaction.
	 *
	 * @param amount the amount of transaction
	 * @param time the time of transaction
	 */
	public Transaction(double amount, Date time) {
		this.amount = amount;
		this.transTime = time;
	}

	public double getAmount() {
		return amount;
	}

	public Date getTransTime() {
		return transTime;
	}
}
